<resources>
    <string name="app_name">HPI Fit</string>
    <string name="app_log_fileName">HPIFitLogs.txt</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login_continue">Continue</string>
    <string name="steps_today">Steps today: </string>
    <string name="steps_yesterday">Steps yesterday: </string>
    <string name="milestones_today">Milestones today: </string>
    <string name="milestones_yesterday">Milestones yesterday: </string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="logout">Logout</string>
    <string name="achievements">Achievements</string>
    <string name="language">Language</string>
    <string name="locale_english">English</string>
    <string name="turn_off_step_counter">Turn off step counter</string>
    <string name="turn_on_step_counter">Turn on step counter</string>
    <string name="progress">Progress</string>
</resources>
