<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/menu_profile"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/menu_settings"/>
        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/menu_share"/>
        <item
            android:id="@+id/nav_rate"
            android:title="@string/rate"
            android:icon="@drawable/menu_rate"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/menu_logout"/>
    </group>

</menu>
