<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/barLayoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <Switch
            android:id="@+id/switchStepCounter"
            android:text="@string/turn_off_step_counter"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/barLayoutToolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_below="@+id/switchStepCounter"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layoutStepsToday"
                    style="@style/MyCardTheme"
                    android:layout_width="match_parent"
                    android:layout_height="160sp">

                    <ImageView
                        android:src="@drawable/ic_steps"
                        android:scaleType="fitCenter"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <RelativeLayout
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtStepsTodayLbl"
                            android:text="@string/steps_today"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="26dp" />

                        <info.smitpatel.hpifit.widgets.AutoResizeTextView
                            android:id="@+id/txtViewStepsCountToday"
                            android:text="1034"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="80sp"
                            android:gravity="center"
                            android:layout_below="@+id/txtStepsTodayLbl"
                            android:layout_above="@+id/layoutStepsYesterday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:id="@+id/layoutStepsYesterday"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="26sp">

                            <TextView
                                android:id="@+id/txtStepsYesterdayLbl"
                                android:text="@string/steps_yesterday"
                                android:textSize="16sp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="26dp" />

                            <TextView
                                android:id="@+id/txtStepsYesterdayValue"
                                android:text="2739"
                                android:textSize="16sp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_marginEnd="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="26dp" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutMilestones"
                    style="@style/MyCardTheme"
                    android:layout_width="match_parent"
                    android:layout_height="160sp">

                    <ImageView
                        android:src="@drawable/ic_achievement"
                        android:scaleType="fitCenter"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <RelativeLayout
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtMilestonesTodayLbl"
                            android:text="@string/milestones_today"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="26dp" />

                        <info.smitpatel.hpifit.widgets.AutoResizeTextView
                            android:id="@+id/txtViewMilestonesCountToday"
                            android:text="7"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="80sp"
                            android:gravity="center"
                            android:layout_below="@+id/txtMilestonesTodayLbl"
                            android:layout_above="@+id/layoutMilestonesYesterday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:id="@+id/layoutMilestonesYesterday"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="26sp">

                            <TextView
                                android:id="@+id/txtMilestonesYesterdayLbl"
                                android:text="@string/milestones_yesterday"
                                android:textSize="16sp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="26dp" />

                            <TextView
                                android:id="@+id/txtMilestonesYesterdayValue"
                                android:text="17"
                                android:textSize="16sp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_marginEnd="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="26dp" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutProgress"
                    style="@style/MyCardTheme"
                    android:layout_width="match_parent"
                    android:layout_height="160dp">

                    <ImageView
                        android:src="@drawable/ic_progress"
                        android:scaleType="fitCenter"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <RelativeLayout
                        android:layout_weight="1.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <!--<TextView-->
                            <!--android:id="@+id/txtTodayLbl"-->
                            <!--android:text="@string/achievements_today"-->
                            <!--android:textSize="16sp"-->
                            <!--android:gravity="center"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="26dp" />-->

                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_drawer_menu" />

</android.support.v4.widget.DrawerLayout>
